grilo: update container types more usefully

Record a container as holding media as soon as we see any, otherwise set it as
not having media when we get to the end without finding any.

https://bugzilla.gnome.org/show_bug.cgi?id=682574